Fixing port + Url

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
   <body>
     <h1> Buy TDE Bot </h1>
     <h2>Buy for $25</h2>
-    <form action ="/pay?id=2e5f87" method="post">
+    <form action ="/pay/2e5f87" method="get">
       <input type="submit" value="buy">
       </form>
   </body>
